# demo-raytracer

./: .gitignore  CMakeLists.txt  README.md
include/: bvh_accelerator.h  camera.h  compute_shader.h  gui.h  input_manager.h  mesh.h  object.h  scene.h  shader.h
src/: main.cpp
src/shaders/gbuffer/: fragment.frag  vertex.vert
src/shaders/grid/: fragment.frag  vertex.vert
src/shaders/main/: fragment.frag  vertex.vert
src/shaders/raytracing/: raytracing.comp
src/shaders/selection/: fragment.frag  vertex.vert
